--- a/generator/templates/generator/password.html
+++ b/generator/templates/generator/password.html
@@ -4,7 +4,7 @@
     <h1>Your password is: </h1>
     <h2 class="alert alert-success">{{ password }}</h2>
     <a href="" id="refresh" class="btn btn-success">Refrest</a>
-    <a class="btn btn-warning" href="{% url 'home' %}">Home</a>
+    <a class="btn btn-info" href="{% url 'home' %}">Home</a>
 </div>
 
 <script>
